--- a/RDE05/index.html
+++ b/RDE05/index.html
@@ -15,7 +15,7 @@
     <p><font size="3" color="black"><a href="ind/Aula02-DW-Guilherme_Recofka.pdf" downloand="ind/Aula02-DW-Guilherme_Recofka.pdf" type="pdf"><b>Aula 02:</b> Conceitos Fundamentais de Desenvolvimento Web.</a></font></p>
 
     <h1><font size="5" color="green" >HTML</font></h1>
-    <p><font size="3" color="black"><a href="ind/aula4.zip" downloand="ind/aula4.zip" type="zip"><b>Aula 04:</b> Introdução ao HTML.</a></font></p>
+    <p><font size="3" color="black"><a href="HTML.html" downloand="HTML.html" type="html"><b>Aula 04:</b> Introdução ao HTML.</a></font></p>
 
     <h1><font size="5" color="green" >Hiperlinks</font></h1>
     <p><font size="3" color="black"><a href="RDE05_Guilherme_Recofka.html" downloand="RDE05_Guilherme_Recofka.html" type="html"><b>Aula 09:</b> Hiperlinks.</a></font></p>
