--- a/RDE07/RDE07_Guilherme_Recofka.html
+++ b/RDE07/RDE07_Guilherme_Recofka.html
@@ -11,21 +11,23 @@
 <body>
     <h1><font color="blue">Branches</color></h1>
         <p><font size="3" color="black">São <b>ramificações</b> de um <b>projeto de software</b> ou <b>documento</b> e tem como objetivo o <b>desenvolvimento paralelo</b> de:</font></p>
-        <ul>
-            <li> Novas funcionalidades;</li>
-            <li> Correção de problemas;</li>
-            <li> Alteração de código.</li>
-        </ul>
+        <p><font size="3" color="black">
+            <ul>
+                <li> Novas funcionalidades;</li>
+                <li> Correção de problemas;</li>
+                <li> Alteração de código.</li>
+            </ul>
+        </font></p>
         <p><font size="3" color="black">A Brache podem ser dividades em Master (ou Main) e Secundária; elas são diferenciadas pelo esquema abaixo: </font></p>
         <p> 
             <figure>
-            <img src="IMG/main-e-sec.jpeg" alt="Branch Main e Branch Secundária - explicações">
+            <img src="IMG/main-e-sec.jpeg" height="50%" width="50%" alt="Branch Main e Branch Secundária - explicações">
             </figure>
         </p>
         <p><font size="3" color="black">A ramificações podem seguir paralelas ou não, e o comando Merge é a mesclagem da informação/código empregado em todas as determinadas Branches secundárias para serem definidas da Main. Segue um esquema em imagem para ficar mais fácil:</font></p>
         <p> 
             <figure>
-            <img src="IMG/ramificacoes.jpeg" alt="Ramificações de Branchs">
+            <img src="IMG/ramificacoes.jpeg" height="50%" width="50%" alt="Ramificações de Branchs">
             </figure>
         </p>
     
