--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     <h1><font size="5" color="green" >Meu currículo</font></h1>
     <p><font size="3" color="black"><a href="RDE05/sobre.html" downloand="RDE05/sobre.html" type="html"><b>Aula 09:</b> <i>Curriculum.</i></a></font></p>
 
-    <h1><font size="5" color="green" >Branches e Hospedagem</font></h1> <p><font size="3" color="black"><a href="RDE07/RDE07_Guilherme_Recofka.html" downloand="RDE07/RDE07_Guilherme_Recofka.html" type="html"><b>Aula 12:</b> Branches e Hospedagem.</a></font></p>
+    <h1><font size="5" color="green" >Branches e Hospedagem</font></h1> <p><font size="3" color="black"><a href="RDE07/RDE07_Guilherme_Recofka.html" downloand="RDE07/RDE07_Guilherme_Recofka.html" type="html"><b>Aula 12:</b> Branches e Hospedagem</a></font></p>
 
     <h1><font size="5" color="green" >Dowloand do site e seus arquivos totais:</font></h1>
 
