--- a/index.html
+++ b/index.html
@@ -25,6 +25,8 @@
 
     <h1><font size="5" color="green" >Branches e Hospedagem</font></h1> <p><font size="3" color="black"><a href="RDE07/RDE07_Guilherme_Recofka.html" downloand="RDE07/RDE07_Guilherme_Recofka.html" type="html"><b>Aula 12:</b> Branches e Hospedagem</a></font></p>
 
+    <h1><font size="5" color="green" >TAG's</font></h1> <p><font size="3" color="black"><a href="RDE08/RDE08_Guilherme_Recofka.html" downloand="RDE08/RDE08_Guilherme_Recofka.html" type="html"><b>Aula 13:</b> TAG's</a></font></p>
+
     <h1><font size="5" color="green" >Dowloand do site e seus arquivos totais:</font></h1>
 
     <p><font size="3" color="black"><a href="site.zip" downloand="site.zip" type="zip">BAIXE NOSSO SITE <b>AGORA!!</b></a></font></p>
