--- a/RDE09/RDE09_Guilherme_Recofka.html
+++ b/RDE09/RDE09_Guilherme_Recofka.html
@@ -8,16 +8,41 @@
 </head>
 <body>
     <h1>Incorporando Multimídias ao site</h1>
-    <h2>Tag iframe</h2>
-     Descrição
+    <h2>Tag <b>iframe</b></h2>
+    <p>A tag supracitada é utilizada para inserção de conteúdos de diversos tipos de mídias. Assim sendo, esta ferramente pressupõe um conteúdo a inserir no site vindo de um outro site. Para adicionar um arquivo do seu aparelho será necessário outras especificações que será visto em breve.</p>
 
     <h2>Incorporar outro site dentro do site</h2>
     <iframe src="http://irati.ifpr.edu.br" height="640" width="640"></iframe>
 
     <h3>Embutir áudio no site</h3>
-    <iframe width="640" height="100%" scrolling="no" frameborder="no" allow="autoplay" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/232937008&color=%23ff5500&auto_play=true&hide_related=false&show_comments=true&show_user=true&show_reposts=false&show_teaser=true"></iframe><div style="font-size: 10px; color: #cccccc;line-break: anywhere;word-break: normal;overflow: hidden;white-space: nowrap;text-overflow: ellipsis; font-family: Interstate,Lucida Grande,Lucida Sans Unicode,Lucida Sans,Garuda,Verdana,Tahoma,sans-serif;font-weight: 100;"><a href="https://soundcloud.com/3lau" title="3LAU" target="_blank" style="color: #cccccc; text-decoration: none;">3LAU</a> · <a href="https://soundcloud.com/3lau/stitches-3lau-remix" title="Stitches (3LAU Remix) - Shawn Mendes" target="_blank" style="color: #cccccc; text-decoration: none;">Stitches (3LAU Remix) - Shawn Mendes</a></div>
+    <iframe width="640" height="100%" scrolling="no" frameborder="no" allow="autoplay" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/232937008&color=%23ff5500&auto_play=true&hide_related=false&show_comments=true&show_user=true&show_reposts=false&show_teaser=true"></iframe><div style="font-size: 10px; color: #cccccc;line-break: anywhere;word-break: normal;overflow: hidden;white-space: nowrap;text-overflow: ellipsis; font-family: Interstate,Lucida Grande,Lucida Sans Unicode,Lucida Sans,Garuda,Verdana,Tahoma,sans-serif;font-weight: 100;"><a href="https://soundcloud.com/3lau" title="3LAU" target="_blank" style="color: #cccccc; text-decoration: none;">3LAU</a> · <a href="https://soundcloud.com/3lau/stitches-3lau-remix" title="Stitches (3LAU Remix) - Shawn Mendes" target="_blank" style="color: #cccccc; text-decoration: none;">Stitches - Shawn Mendes</a></div>
 
     <h3>Incorporar vídeos ao site</h3>
     <iframe width="640" height="360" src="https://www.youtube.com/embed/P8nq1KzxLSo" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+
+    <h2>Tag vídeo do Computador</h2>
+    <p>Como citado no início desta página, a tag de arquivos vindo de seus computadores é necessário outras especificações. Portanto, a tag possui a mesma funcionalidade que o explicado anteriormente, entretanto, para vídeo com uma imagem pré-definida antes. </p>
+    <video width="640" height="360" poster="midias/video/Bike.jpg" controls>
+        <source src="midias/video/Bike.mp4">
+        <source src="midias/video/Bike.webm">
+        <source src="midias/video/Bike.ogv">
+    </video>
+
+    <h2>Tag de áudio</h2>
+    <p>Essa tag é para inserção de áudios que você tem ja baixado em seu aparelho programador e tem a mesa função que a tag explicada no início. A Biblioteca de áudio do YouTube fornece áudios gratuitos e livres de licenças comerciais para se utilizar com fins educativos.</p>
+    <audio preload="metadata" controls>
+        <source src="midias/audio/Hey Sailor - Letter Box.mp3" type="audio/mp3">
+        <source src="midias/audio/Hey Sailor - Letter Box.ogg" type="audio/ogg">
+        <source src="midias/audio/Hey-Sailor-Letter-Box.wav" type="audio/wav">
+    </audio>
+
+    <h2>Tag Picture</h2>
+    <p>Descrição</p>
+    <picture>
+        <source media="(max-widht:400px)" srcset="RDE09/midias/img/bike_110.jpg">
+        <source media="(max-widht:700px)" srcset="RDE09/midias/img/bike_320.jpg">
+        <source media="(max-widht:1000px)" srcset="RDE09/medias/img/bike_640.jpg">
+        <img src="midias/img/bike_full.jpg" alt="Mtb Por-do-Sol">
+    </picture>
 </body>
 </html>
