--- a/RDE09/RDE09_Guilherme_Recofka.html
+++ b/RDE09/RDE09_Guilherme_Recofka.html
@@ -39,9 +39,9 @@
     <h2>Tag Picture</h2>
     <p>Descrição</p>
     <picture>
-        <source media="(max-widht:400px)" srcset="RDE09/midias/img/bike_110.jpg">
-        <source media="(max-widht:700px)" srcset="RDE09/midias/img/bike_320.jpg">
-        <source media="(max-widht:1000px)" srcset="RDE09/medias/img/bike_640.jpg">
+        <source media="(max-widht:400px)" srcset="midias/img/bike_110.jpg">
+        <source media="(max-widht:700px)" srcset="midias/img/bike_320.jpg">
+        <source media="(max-widht:1000px)" srcset="medias/img/bike_640.jpg">
         <img src="midias/img/bike_full.jpg" alt="Mtb Por-do-Sol">
     </picture>
 </body>
