--- a/RDE09/RDE09_Guilherme_Recofka.html
+++ b/RDE09/RDE09_Guilherme_Recofka.html
@@ -37,11 +37,11 @@
     </audio>
 
     <h2>Tag Picture</h2>
-    <p>Descrição</p>
+    <p>Essa tag pressupõe uma e mais imagens do aparelho programador antes. Dessa forma, ela vai aumentando ou diminuindo o tamanho de acordo com a quantidade de pixels necessários.</p>
     <picture>
         <source media="(max-widht:400px)" srcset="midias/img/bike_110.jpg">
         <source media="(max-widht:700px)" srcset="midias/img/bike_320.jpg">
-        <source media="(max-widht:1000px)" srcset="medias/img/bike_640.jpg">
+        <source media="(max-widht:1000px)" srcset="midias/img/bike_640.jpg">
         <img src="midias/img/bike_full.jpg" alt="Mtb Por-do-Sol">
     </picture>
 </body>
