--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     
-    <link rel="icon" href="img/espiral.png" type="image/x-icon">
+    <link rel="icon" href="galaxia-espiral.png" type="image/png">
 
     <title>Projeto na Trilha do Aprendizado</title>
 </head>
