--- a/RDE09/RDE09_Guilherme_Recofka.html
+++ b/RDE09/RDE09_Guilherme_Recofka.html
@@ -41,10 +41,10 @@
     <h2><font color="blue">Tag Picture</color></font></h2>
     <p>Essa tag pressupõe uma e mais imagens do aparelho programador ou incorporada(s). Dessa forma, ela vai aumentando ou diminuindo o tamanho de acordo com a quantidade de pixels necessários.</p>
     <picture>
-        <source media="(max-widht:400px)" srcset="midias/img/bike_110.jpg">
-        <source media="(max-widht:700px)" srcset="midias/img/bike_320.jpg">
-        <source media="(max-widht:1000px)" srcset="midias/img/bike_640.jpg">
-        <img src="midias/img/bike_full.jpg" alt="Mtb Por-do-Sol">
+        <source media="(max-width:500px)" srcset="midias/img/bike_110.jpg">
+        <source media="(max-width:700px)" srcset="midias/img/bike_320.jpg">
+        <source media="(max-width:1000px)" srcset="midias/img/bike_640.jpg">
+        <img src="midias/img/bike_full.jpg" alt="Mtb Por-do-sol">
     </picture>
 </body>
 </html>
