--- a/RDE10/RDE10_Guilherme_Recofka Incorporado.html
+++ b/RDE10/RDE10_Guilherme_Recofka Incorporado.html
@@ -7,6 +7,23 @@
     <title>Cascading Style Sheets - CSS</title>
 
     <link rel="icon" href="img/icon.webp" type="image/x-icon">
+    <style>
+        body{ 
+            font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+            background-color: darksalmon;
+        }
+        h1{
+            background-color: darkred;
+            color:darksalmon;
+            text-align:center;
+        }
+        h2{
+            color:darkred;
+        }
+        h3{
+            color:firebrick;
+        }
+    </style>
 </head>
 <body>
     <h1>Cascading Style Sheets</h1>
@@ -27,15 +44,11 @@
         Os códigos CSS são definidos dentro de uma tag HTML
         Afetam somente a tag em que foi definida.
     </p>
-    <p><a href="RDE10_Guilherme_Recofka inline.html" downloand="RDE10_Guilherme_Recofka inline.html" type="html">Acesse o site referente a essas alterações aqui.</a></p>
 
     <h3>Incorporado ou Internal</h3>
     <p>Os códigos CSS são definidos no cabeçalho, dentro da tag head. Afetam somente o documento em que foi definido.</p>
-    <p><a href="RDE10_Guilherme_Recofka Incorporado.html" downloand="RDE10_Guilherme_Recofka Incorporado.html" type="html">Acesse o site referente a essas alterações aqui.</a></p>
 
     <h3>Externo ou External</h3>
-    <p>Os códigos CSS sçao definidos em um arquivo externo. Afetam todos os documentos que estão linkados ao CSS.</p>
-    <p><a href="RDE10_Guilherme_Recofka Externo.html" downloand="RDE10_Guilherme_Recofka Externo.html" type="html">Acesse o site referente a essas alterações aqui.</a>
-    </p>
+    <p>Os códigos CSS sçao definidos em um arquivo externo. Afetam todos os documentos que estão linkados ao CSS. </p>
 </body>
 </html>
