--- a/RDE10/RDE10_Guilherme_Recofka inline.html
+++ b/RDE10/RDE10_Guilherme_Recofka inline.html
@@ -8,13 +8,13 @@
 
     <link rel="icon" href="img/icon.webp" type="image/x-icon">
 </head>
-<body>
-    <h1>Cascading Style Sheets</h1>
+<body style="background-color: lightsteelblue; font-family: Arial, Helvetica, sans-serif;">
+    <h1 style="color:lightsteelblue; background-color:mediumturquoise; text-align:center;">Cascading Style Sheets</h1>
 
-    <h2>Definição</h2>
-    <p>Cascading Style Sheets - Folhas de Estilo em Cascata - tem por objetivo realizar a estilização de conteúdo  de documentos HTML. Pode definir cores, fontes, espaçamento, alinhamentos, bordas, dentre outros.</p>
+    <h2 style="color:darkblue;">Definição</h2>
+    <p style=font-size:20px>Cascading Style Sheets - Folhas de Estilo em Cascata - tem por objetivo realizar a estilização de conteúdo  de documentos HTML. Pode definir cores, fontes, espaçamento, alinhamentos, bordas, dentre outros.</p>
 
-    <h2>Componentes</h2>
+    <h2 style="color:darkblue;">Componentes</h2>
     <ul>
         <li>Seletores: selecione elementos HTML com base no nome do elemento ao qual o estilo será aplicado.</li>
         <li>Propriedades: o aspecto específico do elemento que você quer usar como estilo.</li>
@@ -27,15 +27,11 @@
         Os códigos CSS são definidos dentro de uma tag HTML
         Afetam somente a tag em que foi definida.
     </p>
-    <p><a href="RDE10_Guilherme_Recofka inline.html" downloand="RDE10_Guilherme_Recofka inline.html" type="html">Acesse o site referente a essas alterações aqui.</a></p>
 
     <h3>Incorporado ou Internal</h3>
     <p>Os códigos CSS são definidos no cabeçalho, dentro da tag head. Afetam somente o documento em que foi definido.</p>
-    <p><a href="RDE10_Guilherme_Recofka Incorporado.html" downloand="RDE10_Guilherme_Recofka Incorporado.html" type="html">Acesse o site referente a essas alterações aqui.</a></p>
 
     <h3>Externo ou External</h3>
-    <p>Os códigos CSS sçao definidos em um arquivo externo. Afetam todos os documentos que estão linkados ao CSS.</p>
-    <p><a href="RDE10_Guilherme_Recofka Externo.html" downloand="RDE10_Guilherme_Recofka Externo.html" type="html">Acesse o site referente a essas alterações aqui.</a>
-    </p>
+    <p>Os códigos CSS sçao definidos em um arquivo externo. Afetam todos os documentos que estão linkados ao CSS. </p>
 </body>
 </html>
